# AEGIS

./: .gitattributes  .gitignore  AGENTS.md  FEATURE_IDEAS.md  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  test_logs.txt
.agents/: aegis_review_trigger.ahk
docs/: ALLOCATOR_DESIGN.md  REFERENCE_FRAMES.md  architecture_design.md  config.md  control.md  data_flow_telemetry.md  fault_tolerant_architecture_design.md  landing_standard.md  mesh_extraction_workflow.md  recording.md  vessel.md  vessel_design.md  vessel_specs.md
recordings/: flight_20260616_030926.npz  flight_20260616_031110.npz  flight_20260616_032420.npz  flight_20260616_032515.npz  flight_20260616_032546.npz  flight_20260616_032711.npz  flight_20260616_032754.npz  flight_20260616_032806.npz  flight_20260616_032819.npz  flight_20260616_032918.npz  flight_20260616_032937.npz  flight_20260616_033122.npz  flight_20260616_033211.npz  flight_20260616_033231.npz  flight_20260616_033306.npz  flight_20260616_033444.npz  flight_20260616_033511.npz  flight_20260616_033535.npz  flight_20260616_033604.npz  flight_20260616_033714.npz  flight_20260616_033733.npz  flight_20260616_033821.npz  flight_20260616_033911.npz  flight_20260616_033933.npz  flight_20260616_034002.npz  flight_20260616_034045.npz  flight_20260616_072953.npz  flight_20260616_073141.npz  flight_20260616_073411.npz  flight_20260616_073837.npz  flight_20260616_074002.npz  flight_20260616_074210.npz  flight_20260616_074222.npz  flight_20260616_074434.npz  flight_20260616_074617.npz  flight_20260616_074654.npz  (+19 more)
scripts/: run.sh  (+40 more)
(+94 files in other folders)
