[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "Active Damping and Explicit Guidance for Inertial Stabilization (AEGIS) — autonomous rocket landing controller"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
